Update DTR File

--- a/Regression/Decision Tree Regression/AM_decision_tree_regression.ipynb
+++ b/Regression/Decision Tree Regression/AM_decision_tree_regression.ipynb
@@ -447,6 +447,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "When a model fits the training data perfectly, it probably means it is overfit and will not perform well with new data.\n",
+    "In ML Lingo this is <b> model has NO BIAS BUT POTENTIALLY LARGE VARIANCE </b>\n",
+    "\n",
+    "How to prevent the tree from overfitting the training data?\n",
+    "<br>\n",
+    "Split the observations when there are more than some minimum number(Watch the Josh Stats Video)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Decision Tree Regression is not best adapted to only 1 feature data sets. It's more suited to having multiple features in the data alongside the dependant variable"
    ]
   }
