Second Commit - Evaluation and Labeling

--- a/Projects/NLP Named Entity Recognition/AM_NLP_NER.ipynb
+++ b/Projects/NLP Named Entity Recognition/AM_NLP_NER.ipynb
@@ -3341,7 +3341,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PART-3"
+    "# PART-3 Evaluation of model by labelling"
    ]
   },
   {
@@ -3350,8 +3350,8 @@
    "source": [
     "**Where are we?**\n",
     "\n",
-    "1. In first part: we started with a function and used \"pos\" to disregard verbs\n",
-    "2. In part 2, we found another better way of achieving this by patterns & matchers: this allowed us to detect multi-token languages such as objective-c"
+    "1. In first part: we started with a function and used \"pos\":part of speech to disregard verbs\n",
+    "2. In part 2, we found another better way of achieving this by patterns & matchers using spacy: this allowed us to detect multi-token languages such as objective-c"
    ]
   },
   {
@@ -3365,10 +3365,394 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = (pd.read_csv(\"archive/Questions.csv\", nrows=2_000_000, \n",
+    "                  encoding=\"ISO-8859-1\", usecols=['Title', 'Id']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import spacy \n",
+    "from spacy.matcher import Matcher\n",
+    "\n",
+    "nlp = spacy.load(\"en_core_web_sm\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obj_c_pattern1 = [{'LOWER': 'objective'},\n",
+    "                  {'IS_PUNCT': True, 'OP': '?'},\n",
+    "                  {'LOWER': 'c'}]\n",
+    "obj_c_pattern2 = [{'LOWER': 'objectivec'}]\n",
+    "\n",
+    "csharp_pattern1 = [{'LOWER': 'c'}, {'LOWER': '#'}]\n",
+    "csharp_pattern2 = [{'LOWER': 'c'}, {'LOWER': 'sharp'}]\n",
+    "csharp_pattern3 = [{'LOWER': 'c#'}]\n",
+    "\n",
+    "fsharp_pattern1 = [{'LOWER': 'f'}, {'LOWER': '#'}]\n",
+    "fsharp_pattern2 = [{'LOWER': 'f'}, {'LOWER': 'sharp'}]\n",
+    "fsharp_pattern3 = [{'LOWER': 'f#'}]\n",
+    " \n",
+    "dot_net_pattern = [{'LOWER': '.net'}]\n",
+    "\n",
+    "php_pattern = [{'LOWER': 'php'}]\n",
+    "\n",
+    "asp_net_pattern = [{'LOWER': {'IN': ['asp.net', 'asp']}}]\n",
+    "\n",
+    "python_pattern = [{'LOWER': 'python'}]\n",
+    "\n",
+    "lisp_pattern1  = [{'LOWER': 'lisp'}]\n",
+    "lisp_pattern2  = [{'LOWER': 'common'}, {'LOWER': 'lisp'}]\n",
+    "\n",
+    "go_pattern1    = [{'LOWER': 'go', 'POS': {'NOT_IN': ['VERB']}}]\n",
+    "go_pattern2    = [{'LOWER': 'golang'}]\n",
+    "\n",
+    "ruby_pattern   = [{'LOWER': 'ruby'}]\n",
+    "\n",
+    "sql_pattern    = [{'LOWER': 'sql'}]\n",
+    "\n",
+    "matlab_pattern = [{'LOWER': 'matlab'}]\n",
+    "\n",
+    "perl_pattern   = [{'LOWER': 'perl'}]\n",
+    "\n",
+    "html_pattern   = [{'LOWER': 'html'}]\n",
+    "\n",
+    "css_pattern   = [{'LOWER': 'css'}]\n",
+    "\n",
+    "js_pattern     = [{'LOWER': {'IN': ['js', 'javascript']}}]\n",
+    "\n",
+    "java_pattern   = [{'LOWER': 'java'}]\n",
+    "\n",
+    "c_pattern      = [{'LOWER': 'c'}]\n",
+    "\n",
+    "cpp_pattern    = [{'LOWER': 'c++'}]\n",
+    "\n",
+    "matcher = Matcher(nlp.vocab, validate=True)\n",
+    "matcher.add(\"OBJ_C_LANG\", [obj_c_pattern1, obj_c_pattern2])\n",
+    "matcher.add(\"PYTHON_LANG\", [python_pattern])\n",
+    "matcher.add(\"GO_LANG\", [go_pattern1, go_pattern2])\n",
+    "matcher.add(\"CSHARP_LANG\", [csharp_pattern1, csharp_pattern2, csharp_pattern3])\n",
+    "matcher.add(\"FSHARP_LANG\", [fsharp_pattern1, fsharp_pattern2, fsharp_pattern3])\n",
+    "matcher.add(\"JS_LANG\", [js_pattern])\n",
+    "matcher.add(\"JAVA_LANG\",[java_pattern])\n",
+    "matcher.add(\"RUBY_LANG\",[ruby_pattern])\n",
+    "matcher.add(\"SQL_LANG\", [sql_pattern])\n",
+    "matcher.add(\"C_LANG\", [c_pattern])\n",
+    "matcher.add(\"CPP_LANG\", [cpp_pattern])\n",
+    "matcher.add(\"PHP_LANG\", [php_pattern])\n",
+    "matcher.add(\"MATLAB_LANG\", [matlab_pattern])\n",
+    "matcher.add(\"PERL_LANG\", [perl_pattern])\n",
+    "matcher.add(\"LISP_LANG\", [lisp_pattern1, lisp_pattern2])\n",
+    "matcher.add(\"HTML_LANG\", [html_pattern])\n",
+    "matcher.add(\"CSS_LANG\", [css_pattern])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deploying SQL Server Databases from Test to Live\n",
+      "How do I connect to a database and loop over a recordset in C#?\n",
+      "How do I delete a file which is locked by another process in C#?\n",
+      "Is Windows Server 2008 \"Server Core\" appropriate for a SQL Server instance?\n",
+      "Good STL-like library for C\n",
+      "Paging SQL Server 2005 Results\n",
+      "MySQL/Apache Error in PHP MySQL query\n",
+      "How to set up unit testing for Visual Studio C++\n",
+      "How do you pack a visual studio c++ project for release?\n",
+      "How do you get leading wildcard full-text searches to work in SQL Server?\n"
+     ]
+    }
+   ],
+   "source": [
+    "titles = (_ for _ in df['Title'])\n",
+    "g = (d for d in nlp.pipe(titles) if len(matcher(d))>0)\n",
+    "\n",
+    "for i in range(10):\n",
+    "    print(next(g))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Next Steps: Do actual labelling to see how we're doing?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "510"
+      ]
+     },
+     "execution_count": 181,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "titles = (_ for _ in df['Title'][:2000])\n",
+    "sum(1 for d in nlp.pipe(titles) if len(matcher(d))>0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These many we're able to detect programming languages from out of 2000"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we'd like to manually label(for lets say first 500 iterations) if we can find programming languages in the excel file. 1 if found 0 if not.\n",
+    "\n",
+    "Save it in txt format and tab separated"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Doing that will ensure that we can easily see now the cases where\n",
+    "\n",
+    "- Prediction is 1 but actual labeling is 0\n",
+    "- Prediction is 0 but actual labeling is 1\n",
+    "\n",
+    "And then we can see where we're going wrong/how to improve"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One problem : Python will get deteced but **Python3.2** won't so we have to deal with **versioning**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"actual_labeling.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[{'LOWER': 'python'}],\n",
+       " [{'LOWER': {'REGEX': '(python\\\\d+\\\\.?\\\\d*.?\\\\d*)'}}],\n",
+       " [{'LOWER': 'python'}, {'TEXT': {'REGEX': '(\\\\d+\\\\.?\\\\d*.?\\\\d*)'}}]]"
+      ]
+     },
+     "execution_count": 183,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def create_versioned(name):\n",
+    "    return [\n",
+    "        #for \"python\"\n",
+    "        [{'LOWER': name}],\n",
+    "        #for \"python3.5.5 / python3.4\"\n",
+    "        [{'LOWER': {'REGEX': f'({name}\\d+\\.?\\d*.?\\d*)'}}], \n",
+    "        #for \"python 3.5.5 / python 3.4\"\n",
+    "        [{'LOWER': name}, {'TEXT': {'REGEX': '(\\d+\\.?\\d*.?\\d*)'}}],\n",
+    "    ]\n",
+    "\n",
+    "create_versioned('python')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 274,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obj_c_pattern1 = [{'LOWER': 'objective'},\n",
+    "                  {'IS_PUNCT': True, 'OP': '?'},\n",
+    "                  {'LOWER': 'c'}]\n",
+    "obj_c_pattern2 = [{'LOWER': 'objectivec'}]\n",
+    "\n",
+    "csharp_pattern1 = [{'LOWER': 'c'}, {'LOWER': '#'}]\n",
+    "csharp_pattern2 = [{'LOWER': 'c'}, {'LOWER': 'sharp'}]\n",
+    "csharp_pattern3 = [{'LOWER': 'c#'}]\n",
+    "\n",
+    "fsharp_pattern1 = [{'LOWER': 'f'}, {'LOWER': '#'}]\n",
+    "fsharp_pattern2 = [{'LOWER': 'f'}, {'LOWER': 'sharp'}]\n",
+    "fsharp_pattern3 = [{'LOWER': 'f#'}]\n",
+    "\n",
+    "lisp_pattern1  = [{'LOWER': 'lisp'}]\n",
+    "lisp_pattern2  = [{'LOWER': 'common'}, {'LOWER': 'lisp'}]\n",
+    "\n",
+    "go_pattern1    = [{'LOWER': 'go', 'POS': {'NOT_IN': ['VERB']}}]\n",
+    "go_pattern2    = [{'LOWER': 'golang'}]\n",
+    "\n",
+    "html_pattern   = [{'LOWER': 'html'}]\n",
+    "css_pattern    = [{'LOWER': 'css'}]\n",
+    "sql_pattern    = [{'LOWER': 'sql'}]\n",
+    "js_pattern     = [{'LOWER': {'IN': ['js', 'javascript']}}]\n",
+    "\n",
+    "cpp_pattern    = [{'LOWER': 'c++'}]\n",
+    "\n",
+    "\n",
+    "versioned_languages = ['ruby', 'php', 'python', 'perl', 'java', 'haskell', \n",
+    "                       'scala', 'c', 'cpp', 'matlab', 'bash', 'delphi']\n",
+    "flatten = lambda l: [item for sublist in l for item in sublist]\n",
+    "versioned_patterns = flatten([create_versioned(lang) for lang in versioned_languages])\n",
+    "\n",
+    "matcher = Matcher(nlp.vocab, validate=True)\n",
+    "matcher.add(\"PROG_LANG\", \n",
+    "            [obj_c_pattern1, obj_c_pattern2,\n",
+    "            go_pattern1, go_pattern2,\n",
+    "            lisp_pattern1, lisp_pattern2,\n",
+    "            csharp_pattern1, csharp_pattern2, csharp_pattern3,\n",
+    "            fsharp_pattern1, fsharp_pattern2, fsharp_pattern3,\n",
+    "            html_pattern, css_pattern, sql_pattern, js_pattern,\n",
+    "            cpp_pattern, *versioned_patterns])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 275,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "532"
+      ]
+     },
+     "execution_count": 275,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "titles = (_ for _ in df['Title'][:2000])\n",
+    "sum(1 for d in nlp.pipe(titles) if len(matcher(d))>0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### We see an improvement."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Python Nested List Comprehension Concept"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "some_list = [\"Akshit\",\"Miglani\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['A', 'k', 's', 'h', 'i', 't', 'M', 'i', 'g', 'l', 'a', 'n', 'i']"
+      ]
+     },
+     "execution_count": 236,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[alphabet for word in some_list for alphabet in word]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "k\n",
+      "s\n",
+      "h\n",
+      "i\n",
+      "t\n",
+      "M\n",
+      "i\n",
+      "g\n",
+      "l\n",
+      "a\n",
+      "n\n",
+      "i\n"
+     ]
+    }
+   ],
+   "source": [
+    "for word in some_list:\n",
+    "    for alphabet in word:\n",
+    "        print(alphabet)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----"
+   ]
   }
  ],
  "metadata": {
