--- a/Regression/Support Vector Regression/AM_Support_Vector_Regression.ipynb
+++ b/Regression/Support Vector Regression/AM_Support_Vector_Regression.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![intuition.png](images/intuition.png)"
+    "![intuition.png](images/intuition.PNG)"
    ]
   },
   {
@@ -531,7 +531,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![gaussrbf.png](images/gauss_rbf.png)"
+    "![gaussrbf.png](images/gauss_rbf.PNG)"
    ]
   },
   {
